fixed issues with buttons not displaying properly on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -146,14 +146,28 @@ body {
 .short-bio h1 {
     font-size: 34px;
     color: #204666;
-    color: #273043;
     padding: 10px 0 20px 0;
 }
 
 .portfolio-btns {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 15px;
     width: 100%;
     max-width: 700px;
 }
+
+.bio-btn-container {
+    width: 50%;
+    min-width: 290px;
+}
+
+@media screen and (max-width: 630px) {
+    .bio-btn-container {
+        width: 100%;
+    }
+}
+
 
 .icon-styled-btn {
     display: flex;
@@ -161,7 +175,6 @@ body {
     border: none;
     overflow: hidden;
     float: left;
-    width: 240px;
     height: 45px;
     font-size: 16px;
     font-weight: 500;
@@ -170,6 +183,7 @@ body {
     transition: 0.1s ease;
     background-color: #204666;
     background-color: #2c374d;
+    transition: 0.2s ease;
 }
 
 .icon-styled-btn:hover {
@@ -177,7 +191,13 @@ body {
 }
 
 .btn-text {
-    width: 180px;
+    width: 210px;
+}
+
+@media screen and (max-width: 430px) {
+    .btn-text {
+        width: 250px;
+    }
 }
 
 .btn-icon {
@@ -187,10 +207,6 @@ body {
     width: 60px;
     font-size: 32px;
     background-color: rgba(0, 0, 0, 0.3);
-}
-
-.first-btn {
-    margin: 0 50px 30px 0;
 }
 
 .portfolio-content {
@@ -299,7 +315,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    line-height: 25px;
+    line-height: 30px;
     padding: 0 25px;
     width: 100%;
     height: 200px;
