--- a/css/projects.css
+++ b/css/projects.css
@@ -353,7 +353,7 @@ ion-icon {
     width: 100%;
     padding: 25px 0;
     background-color: #478e91;
-    background-color: #204666;
+    background-color: #2c374d;
 }
 
 .dyk-div p {
@@ -381,7 +381,7 @@ ion-icon {
     height: 150px;
     text-align: center;
     line-height: 25px;
-    padding: 0 10px;
+    padding: 0 25px;
     color: #f1f1f1;
     background-color: #204666;
     background-color: #273043;
